2003-12-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* eres.adb, eres.out, makefile:
	Test for AWS.Resources.Exist routine.

2003-12-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tmem.adb:
	Test new Constant_Access type and Trim parameter.

2003-12-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zres.adb, zres.out:
	Add test getting compressed disk files.

	* file2.adb, file2.out:
	New test for gzipped files transfer.

	* tmem.adb, tmem.out:
	Test generic memory stream interface.

	* makefile:
	Include tmem and file2 tests.
	Add file2 from zres dependence, file2 use the same embedded
	 resources.

2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD_SEC): Add new test cert.

	* client.pem:
	Initial revision.

	* cert.adb, cert.out:
	Initial revision.

2003-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* timer.adb:
	Properly update the current time variable in the loop to avoid
	 infinite loop.

2003-12-10  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add timer.

	* timer.adb, timer.out:
	Initial revision.

2003-12-08  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(init): Redirect output of gzip to /dev/null.

2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* check_mem.adb:
	(CB): Add handling of file[abc].txt.
	(Check_ZOpen): New procedure.
	Call ZOpen in main loop.

	* makefile:
	(RT_STD): Remove zres, add zopen.
	(OTH_TESTS): Add zres.
	(init): Generate file[abc].txt for the ZOpen regression test.
	(clean): Add file[abc].txt*

	* zopen.adb, zopen.out:
	Initial revision.

2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(zres): Add compressed file.tmplt.

	* zres.out:
	Update to new output.

	* zres.adb:
	Update test. Add test for compressed templates.

2003-12-02  Pascal Obry  <p.obry@wanadoo.fr>

	* zstrm3.adb:
	Removed.

	* makefile:
	(RT_STD): Remove zstrm3 add zres.

	* zres.adb, zres.out:
	Initial revision.

2003-12-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add zstrm3.

	* zstrm3.adb, zstrm3.out: